--- a/project_posts/2014-03-28-Disposal.md
+++ b/project_posts/2014-03-28-Disposal.md
@@ -1,3 +1,3 @@
 Disposal at work : a multiprojection project for an exhibit in an art gallery.
 
-![Mapping](project_images/mapping.jpg?raw=true "Mappin")
+![Mapping](../project_images/mapping.jpg?raw=true "Mappin")
